@@ -37,7 +37,7 @@
     <string name="location_longitude">Location longitude</string>
     <string name="cancel">Cancel</string>
     <string name="store_location">Store Location</string>
-    <string name="enter_location">Enter Location</string>
+    <string name="enter_location">Enter destination manually</string>
     <string name="rename_destination">Rename destination</string>
     <string name="store_location_disabled">Unable to store location if there is no current location</string>
     <string name="enter_location_invalid_latitude">Latitude is outside the valid range [-90°,90°]</string>
