@@ -1,4 +1,5 @@
  v0.7 (not released yet)
+ - issue #73 : add form to manually enter a location, thanks to Timotheos Constambeys
  - translated to Ukrainian, thanks to Oleksiy
  - translated to Turkish, thanks to Mesut Akcan
 
